# webrtc

./: .clang-tidy  .git-blame-ignore-revs  .gitignore  .gn  .vpython3  AUTHORS  BUILD.gn  DEPS  GEMINI.md  OWNERS  OWNERS_INFRA  PRESUBMIT.py  README.chromium  README.md  WATCHLISTS  clean_update_changed_files.txt  native-api.md  signal_changed_files.txt  unsafe_buffers_paths.txt  update_changed_files.txt  webrtc.gni  webrtc_lib_link_test.cc  whitespace.txt
agents/: OWNERS  (+1 more)
api/environment/: BUILD.gn  deprecated_global_field_trials.cc  deprecated_global_field_trials.h  environment_factory.cc  environment_unittest.cc
api/task_queue/test/: BUILD.gn  mock_task_queue_base.h
api/test/network_emulation/: BUILD.gn  DEPS  dual_pi2_network_queue.cc  dual_pi2_network_queue.h  dual_pi2_network_queue_unittest.cc  leaky_bucket_network_queue.cc  leaky_bucket_network_queue.h  leaky_bucket_network_queue_unittest.cc  network_queue.h  schedulable_network_node_builder.cc  schedulable_network_node_builder.h  token_bucket_network_behavior_builder.cc  token_bucket_network_behavior_builder.h  token_bucket_network_behavior_config.h
api/transport/: BUILD.gn  DEPS  DIR_METADATA  OWNERS  bitrate_settings.h  data_channel_transport_interface.h  ecn_marking.h  ecn_marking_unittest.cc  field_trial_based_config.cc  field_trial_based_config.h  goog_cc_factory.cc  goog_cc_factory.h  network_control.h  network_types.cc  network_types.h  sctp_transport_factory_interface.h  stun.cc  stun.h  stun_unittest.cc
api/transport/rtp/: BUILD.gn  DEPS  corruption_detection_message.cc  corruption_detection_message.h  corruption_detection_message_unittest.cc  dependency_descriptor.cc
api/video/corruption_detection/: BUILD.gn  corruption_detection_filter_settings.h  corruption_detection_settings_generator.cc  corruption_detection_settings_generator.h  corruption_detection_settings_generator_unittest.cc  frame_instrumentation_data.cc  frame_instrumentation_data.h  frame_instrumentation_data_reader.cc  frame_instrumentation_data_reader.h  frame_instrumentation_data_reader_unittest.cc  frame_instrumentation_data_unittest.cc  frame_instrumentation_evaluation.cc  frame_instrumentation_evaluation.h  frame_instrumentation_evaluation_unittest.cc  frame_instrumentation_generator.cc  frame_instrumentation_generator.h  frame_instrumentation_generator_factory.cc  frame_instrumentation_generator_factory.h  frame_instrumentation_generator_unittest.cc
modules/audio_processing/capture_mixer/: BUILD.gn  audio_content_analyzer.cc  audio_content_analyzer.h  audio_content_analyzer_unittest.cc  capture_mixer.cc  capture_mixer.h  capture_mixer_unittest.cc  channel_content_remixer.cc  channel_content_remixer.h  channel_content_remixer_unittest.cc  dc_levels_estimator.cc  dc_levels_estimator.h  dc_levels_estimator_unittest.cc  energy_estimator.cc  energy_estimator.h  energy_estimator_unittest.cc  remixing_logic.cc  remixing_logic.h  remixing_logic_unittest.cc  saturation_estimator.cc  saturation_estimator.h  saturation_estimator_unittest.cc
modules/audio_processing/ns/: BUILD.gn  fast_math.cc  fast_math.h  histograms.h  noise_estimator.cc  noise_estimator.h  noise_suppressor.cc  noise_suppressor.h  ns_fft.cc  ns_fft.h  prior_signal_model_estimator.cc  quantile_noise_estimator.cc  quantile_noise_estimator.h  signal_model_estimator.cc  signal_model_estimator.h  speech_probability_estimator.cc  speech_probability_estimator.h  wiener_filter.cc  wiener_filter.h
modules/congestion_controller/: BUILD.gn  DEPS  DIR_METADATA  OWNERS  receive_side_congestion_controller.cc  receive_side_congestion_controller_unittest.cc
modules/congestion_controller/goog_cc/: BUILD.gn  acknowledged_bitrate_estimator_interface.cc  alr_detector.cc  alr_detector.h  alr_detector_unittest.cc  delay_based_bwe.cc  delay_based_bwe.h  delay_based_bwe_unittest_helper.cc  delay_based_bwe_unittest_helper.h  goog_cc_network_control.cc  goog_cc_network_control.h  goog_cc_network_control_unittest.cc  inter_arrival_delta.cc  loss_based_bwe.cc  loss_based_bwe.h  loss_based_bwe_unittest.cc  loss_based_bwe_v2.cc  loss_based_bwe_v2.h  loss_based_bwe_v2_test.cc  probe_bitrate_estimator_unittest.cc  probe_controller.cc  probe_controller.h  probe_controller_unittest.cc  (+7 more)
ringrtc/: BUILD.gn
ringrtc/oboe/: BUILD.gn
ringrtc/opus/: BUILD.gn  DIR_METADATA  README.chromium  build_args.gni
ringrtc/rffi/: BUILD.gn
rust/webrtc_import/: BUILD.gn  import.rs  lib.rs  path_utils.rs  webrtc_import_test.rs  webrtc_import_test_lib.rs
tools_webrtc/: BUILD.gn  DIR_METADATA  OWNERS  apply_clang_tidy.py  configure_pipewire.py  generate_changelog.py  get_landmines.py  gn_check_autofix.py  summarize_external_commits.py  swap_gtest_args.py  swap_gtest_args_unittest.py  validate_test_registration.py  verify_test_suite_metadata.py
tools_webrtc/android/: build_aar.py
tools_webrtc/autoroller/: roll_deps.py
tools_webrtc/ios/: build_ios_libs.py
tools_webrtc/iwyu/: apply_include_cleaner.py  apply_include_cleaner_test.py  mappings.imp
tools_webrtc/libs/: generate_licenses.py
tools_webrtc/mb/: mb.py  mb_config.pyl  mb_unittest.py
tools_webrtc/sanitizers/: lsan_suppressions_webrtc.cc  tsan_suppressions_webrtc.cc  ubsan_suppressions.txt  ubsan_vptr_suppressions.txt
tools_webrtc/sslroots/: generate_sslroots.py
video/corruption_detection/: BUILD.gn  corruption_classifier.cc  corruption_classifier.h  frame_instrumentation_evaluation.cc  frame_instrumentation_evaluation.h  frame_instrumentation_evaluation_unittest.cc  frame_instrumentation_generator.cc  frame_instrumentation_generator.h  frame_instrumentation_generator_impl.cc  frame_instrumentation_generator_impl.h  frame_instrumentation_generator_unittest.cc  frame_pair_corruption_score.cc  frame_selector.cc  frame_selector.h  frame_selector_unittest.cc  generic_mapping_functions.cc  generic_mapping_functions.h  generic_mapping_functions_unittest.cc  halton_frame_sampler.cc  halton_frame_sampler.h  halton_frame_sampler_unittest.cc  utils.cc  utils.h  utils_unittest.cc  video_frame_sampler.cc  video_frame_sampler.h  video_frame_sampler_unittest.cc
(+4042 files in other folders)
